workout.css
body {
		background-color: #EEEEEE;
}

.row {
	background-color: #EEEEEE;
	height: 100vh;
}

form {
	margin-top: 5px;
	margin-right: 5px;
	margin-bottom: 5px;
	margin-left: 5px;
}

table {
	margin-top: 5px;
	margin-right: 5px;
	margin-bottom: 5px;
	margin-left: 5px;
}

h1 {
	position: relative;
	left: 10px;
}

.card-style {
	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
    min-height: 56px;
    transition: min-height 0.3s;
    transition-property: min-height;
    transition-duration: 0.3s;
    transition-timing-function: initial;
    transition-delay: initial;
    padding-top: 10px;
    padding-right: 10px;
    padding-bottom: 10px;
    padding-left: 10px;
    background-color: white;
}

#table-container {
	padding-right: 15px;
	margin-right: 10px;
	margin-top: 20px;
}

#form-container {
	margin-left: 10px;
	margin-top: 20px;
}

#Delete {
	margin-left: 5px;
}

.col-md-12 {
	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
	background: #FFEB3B; 
  	background: -webkit-linear-gradient(left, #FFEB3B, #FFF59D);
  	background: -o-linear-gradient(right, #FFEB3B, #FFF59D);
  	background: -moz-linear-gradient(right, #FFEB3B, #FFF59D);
  	background: linear-gradient(to right, #FFEB3B, #FFF59D);
}

@media only screen and (min-width: 1000px){
	#table-container{
		max-height: 500px;
		overflow-y: auto;
	}
}

@media only screen and (min-width: 501px) and (max-width: 999px){
	#Delete {
		margin-left: 0px;
		margin-top: 5px;
	}
	#form-container {
		margin-left: 0px;
		margin-right: 0px;
	}

	#table-container {
		margin-right: 0px;
		margin-left: 0px;
	}
}

@media only screen and (max-width: 500px){
	#table-container{
		overflow-x: auto;
	}
	#Delete {
		margin-left: 0px;
		margin-top: 5px;
	}
	
	#form-container {
		margin-left: 0px;
		margin-right: 0px;
	}

	#table-container {
		margin-right: 0px;
		margin-left: 0px;
	}
}

